deployments/locationAPI-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locations
  labels:
    app: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
      - name: sample-server
        image: adchungcsc/locationapi
        ports:
        - containerPort: 8090
