deployments/locationAPI-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: locations
spec:
  selector:
    app: sample
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
