deployments/locationAPI-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: locations
spec:
  rules:
  - http:
      paths:
      - path: /locationAPI
        backend:
          serviceName: sample-service
          servicePort: 8090
